# mTarsier

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scope.md
.github/ISSUE_TEMPLATE/: client-request.md  server-request.md
.github/workflows/: release.yml
docs/: deep-links.md  export-import.md  marketplace.md  mcp-installation.md  skill-installation.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-sidecar.sh
src-tauri/src/: lib.rs  marketplace.rs  registry.rs  tray.rs
src-tauri/src/commands/: audit.rs  cli.rs  clients.rs  config.rs  flow.rs  io.rs  mod.rs  server.rs  skills.rs  tray.rs  updater.rs  utils.rs
src/components/: NavItem.tsx  Sidebar.tsx  SystemStatus.tsx  TarsierEyeLogo.tsx
src/components/clients/: ClientCard.tsx  ClientDetailPanel.tsx  ClientFilter.tsx  ClientSkillsPanel.tsx  McpServerList.tsx
src/components/config/: AddServerDialog.tsx  BackupItem.tsx  (+19 more)
src/data/: marketplace.ts
src/hooks/: useClientDetection.ts  useMarketplaceInstalls.ts
src/layouts/: AppLayout.tsx
src/lib/: clients.ts  mcpUtils.ts  themes.ts  utils.ts
src/pages/: About.tsx  AuditLogs.tsx  Clients.tsx  Config.tsx  Dashboard.tsx  Marketplace.tsx  Settings.tsx  Skills.tsx
src/store/: auditStore.ts  clientStore.ts  configStore.ts  deepLinkStore.ts  settingsStore.ts  skillStore.ts  skillsStore.ts  themeStore.ts
src/types/: audit.ts  client.ts  config.ts
(+17 files in other folders)
