[package]
name = "mtarsier"
version = "0.1.0"
description = "mTarsier - Desktop app for managing MCP servers"
authors = ["mTarsier"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "mtarsier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mtarsier"
path = "src/main.rs"

[[bin]]
name = "tsr"
path = "src/bin/tsr.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "5"
chrono = "0.4"
toml = "0.8"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
clap = { version = "4", features = ["derive"] }
